subprojects/swen430/src/test/resources/tests/valid/Const_Valid_6.while
const SUM is 2 + 1

void main() {
  print SUM * 2;
}
