subprojects/swen430/src/test/resources/tests/invalid/Break_Invalid_3.while
string foo(int x) {
    switch (x) {
        case 1:
            return "1";
            break;
        case 2:
            return "2";
        default:
            return "default";
    }
}

void main() {
    print foo(1);
}

